      purposes on Unix-alikes in a form suitable for shell execution.
      Note that those are merely command-line arguments, they do not
      include environment variables (one more reason to use configure
      variables instead) or site configuration settings.

      \item Framework installation now supports \code{DESTDIR}
      (Mac OS X only).
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item The locale category \samp{LC_MONETARY} was only being set on
      startup on Windows: that is now done on Unix-alikes where
      supported.

      \item Reference class utilities will detect an attempt to modify
      methods or fields in a locked class definition (e.g., in a
      namespace) and generate an error.

      \item The formula methods for \code{lines()}, \code{points()} and
      \code{text()} now work even if package \pkg{stats} is not on the
      search path.

      \item In principle, S4 classes from different packages could
      have the same name.  This has not previously worked.  Changes
      have now been installed that should allow such classes and
      permit methods to use them.  New functions \code{className()}
      and \code{multipleClasses()} are related tools for programming.

      \item Work around an issue in Linux (a system \code{select} call
      resetting \code{tv}) which prevented internet operations from
      timing out properly.

      \item Several stack trampling and overflow issues have been fixed
      in TRE, triggered by \code{agrep} and friends with long patterns.
      (\PR{14627}.)

      \item (\dQuote{design infelicity}) Field assignments in reference
      classes are now consistent with slots in S4 classes:  the
      assigned value must come from the declared class (if any) for the field
      or from a subclass.

      \item The methods objects constructed for \code{"coerce"} and
      \code{"coerce<-"} were lacking some essential information in the